# timebaseula

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  EVIDENCES.md  LICENSE  Makefile  PLAN.md  PROPERTY_TESTING.md  README.md  TODO.md  autoresearch.jsonl  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bump.yml  lint.yml  publish.yml  release.yml  test.yml
artifacts/tuning/aggregated/: best_configs.json  report.json
artifacts/tuning/aggregated-smoke/: report.json
devtools/: __init__.py  benchmark_common.py  benchmark_custom.py  benchmark_long_horizon.py  benchmark_synthetic.py  benchmark_synthetic_dlinear.py  check_forecast_mae.py  generate_datasets.py  reporting.py
docs/: benchmark.md  branches.md  contribute.md  daily-panel-aggregated-benchmark-smoke.md  daily-panel-aggregated-benchmark.md  daily-panel-benchmark.md  daily-panel-detailed-benchmark.md  index.md  install.md  models.md  paper-for-agents.md  references.md  release-notes.md  scripts.md  usage.md
docs/plan/: PLAN.md  TODO.md
docs/theme/: main.html
scripts/: benchmark_airpassengers.py  benchmark_custom.py  benchmark_custom_dataset.py  benchmark_long_horizon.py  benchmark_nixtla_panel.py  benchmark_synthetic.py  benchmark_synthetic_dlinear.py  check_forecast_mae.py  eval_dlinear_mae.py  generate_datasets.py  generate_synthetic_plot.py  prepare_nixtla_panel.py  reporting.py  tune_nixtla_panel_aggregated.py
tests/: conftest.py  property_strategies.py  test_benchmark_custom_dataset.py  test_benchmark_long_horizon.py  test_benchmark_report.py  test_check_forecast_mae.py  test_generate_datasets.py  test_generate_synthetic_plot.py  test_init.py  test_synthetic_series.py  test_timebase.py
tests/integration/: test_neuralforecast_fit_predict.py
tests/unit/: test___init__.py  test_auto.py  test_benchmark_airpassengers.py  test_benchmark_nixtla_panel.py  test_benchmark_nixtla_panel_autotheta.py  test_benchmark_nixtla_panel_detailed_scope.py  test_benchmark_nixtla_panel_plot_privacy.py  test_benchmark_nixtla_panel_presets.py  test_benchmark_nixtla_panel_scope.py  test_benchmark_nixtla_panel_tuned_configs.py  test_model_core.py  test_model_decomposition.py  test_model_defaults.py  test_model_factories.py  test_prepare_nixtla_panel.py  test_timebase.py  test_tune_nixtla_panel_aggregated.py
tests/unit/devtools/: test_benchmark_common.py  test_benchmark_custom.py  test_benchmark_custom_dataset.py  test_benchmark_long_horizon.py  test_benchmark_synthetic.py  test_check_forecast_mae.py  test_generate_datasets.py  test_generate_synthetic_plot.py  test_repo_hygiene.py  test_reporting.py
tests/utils/: __init__.py  synthetic_series.py
timebaseula/: __init__.py  recommend.py  synthetic.py  utils.py
timebaseula/models/: auto.py  base.py  config.py  core.py  decomposition.py  defaults.py  factories.py  timebase.py
