[project]
name = "timebaseula"
version = "0.2.4"
description = "Compact TimeBase-style forecasting models for NeuralForecast"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "MIT"
authors = [{ name = "Oleguer Sagarra", email = "ula@dribia.com" }]
maintainers = [{ name = "Oleguer Sagarra", email = "ula@dribia.com" }]
dependencies = [
	"neuralforecast>=1.7.4,<2",
	"numpy>=2.2.0,<3",
	"pandas>=2.2.0,<3",
	"torch>=2.0.0,<3",
]

[project.urls]
Homepage = "https://github.com/dribia/timebaseula"
Repository = "https://github.com/dribia/timebaseula"

[dependency-groups]
docs = [
	"mike>=2.1.3,<3",
	"mkdocs>=1.6.1,<2",
	"mkdocs-material>=9.6.14,<10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
	"integration: heavy integration tests, run only with --run-integration",
]

[tool.hatch.build.targets.wheel]
packages = ["timebaseula"]

[tool.hatch.build.targets.sdist]
include = [
	"timebaseula",
	"docs",
	"README.md",
	"LICENSE",
	"pyproject.toml",
	"mkdocs.yml",
]

[tool.uv]
required-version = ">=0.9.26,<1.0"
default-groups = ["docs"]
