[project]
name = "timebaseula"
version = "0.3.4"
description = "Compact TimeBase-style forecasting models for NeuralForecast"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "MIT"
authors = [{ name = "Oleguer Sagarra", email = "ula@dribia.com" }]
maintainers = [{ name = "Oleguer Sagarra", email = "ula@dribia.com" }]
dependencies = [
  "neuralforecast>=1.7.4,<4",
  "numpy>=2.2.0,<3",
  "pandas>=2.2.0,<3",
  "ray[tune]>=2.47.0,<3",
  "torch>=2.0.0,<3",
]

[project.urls]
Homepage = "https://github.com/uladribia/timebaseula"
Repository = "https://github.com/uladribia/timebaseula"

[dependency-groups]
benchmark = [
  "matplotlib>=3.10.0,<4",
  "rich>=14.1.0,<15",
  "scikit-learn>=1.7.0,<2",
  "statsforecast>=2.0.3,<3; python_version >= '3.12' and sys_platform != 'win32'",
  "typer>=0.16.0,<1",
  "utilsforecast>=0.2.12,<1",
]
docs = [
  "mike>=2.1.3,<3",
  "mkdocs>=1.6.1,<2",
  "mkdocs-material>=9.6.14,<10",
]
test = [
  "pytest>=8.4.0,<10",
  "pytest-cov>=7.0.0,<8",
  "pytest-mock>=3.14.0,<4",
]
tooling = [
  "deptry>=0.24.0,<1",
  "prek>=0.3.8,<1",
  "ruff>=0.14.0,<1",
  "tombi>=0.7.22,<1",
  "ty>=0.0.1a17,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: heavy integration tests, run only with --run-integration",
]

[tool.hatch.build.targets.wheel]
packages = ["timebaseula"]

[tool.hatch.build.targets.sdist]
include = [
  "timebaseula",
  "scripts",
  "docs",
  "README.md",
  "LICENSE",
  "pyproject.toml",
  "mkdocs.yml",
]

[tool.deptry]
known_first_party = ["timebaseula"]

[tool.deptry.per_rule_ignores]
DEP004 = ["matplotlib", "rich", "statsforecast", "typer", "utilsforecast"]

[tool.uv]
required-version = ">=0.9.26,<1.0"
default-groups = ["benchmark", "docs", "test", "tooling"]
