[project]
name = "timebaseula"
version = "0.3.6"
description = "Compact TimeBase-style forecasting models for NeuralForecast"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "MIT"
authors = [{ name = "Oleguer Sagarra", email = "ula@dribia.com" }]
maintainers = [{ name = "Oleguer Sagarra", email = "ula@dribia.com" }]
dependencies = [
  "neuralforecast>=3.1.7,<4",
  "numpy>=2.2.6,<3",
  "pandas>=2.3.3,<3",
  "ray[tune]>=2.55.0,<3",
  "torch>=2.11.0,<3",
]

[project.urls]
Homepage = "https://github.com/uladribia/timebaseula"
Repository = "https://github.com/uladribia/timebaseula"

[dependency-groups]
benchmark = [
  "matplotlib>=3.10.8,<4",
  "rich>=15.0.0,<16",
  "scikit-learn>=1.7.2,<2",
  "statsforecast>=2.0.3,<3; python_version >= '3.12' and sys_platform != 'win32'",
  "typer>=0.24.1,<1",
  "utilsforecast>=0.2.15,<1",
]
docs = [
  "mike>=2.2.0,<3",
  "mkdocs>=1.6.1,<2",
  "mkdocs-material>=9.7.6,<10",
]
test = [
  "hypothesis>=6.152.1,<7",
  "pytest>=9.0.3,<10",
  "pytest-cov>=7.1.0,<8",
  "pytest-mock>=3.15.1,<4",
]
tooling = [
  "deptry>=0.25.1,<1",
  "prek>=0.3.9,<1",
  "ruff>=0.15.11,<1",
  "tombi>=0.9.19,<1",
  "ty>=0.0.31,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: heavy integration tests, run only with --run-integration",
]

[tool.hatch.build.targets.wheel]
packages = ["timebaseula"]

[tool.hatch.build.targets.sdist]
include = [
  "timebaseula",
  "scripts",
  "docs",
  "README.md",
  "LICENSE",
  "pyproject.toml",
  "mkdocs.yml",
]

[tool.deptry]
known_first_party = ["timebaseula"]

[tool.deptry.per_rule_ignores]
DEP004 = ["matplotlib", "rich", "statsforecast", "typer", "utilsforecast"]

[tool.uv]
required-version = ">=0.9.26,<1.0"
default-groups = ["benchmark", "docs", "test", "tooling"]
